--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@base {
+  input:focus,
+  textarea:focus,
+  select:focus {
+    outline: none;
+    border: none;
+  }
+}
